Create and display annonces